tests/invalid_types/wrong_return.hk
fun wrong() I64{
    return 12;
}

fun main() I32{
    return wrong();
}

#[
<fail>
]#